# srest

./: Cargo.toml  index.html
src/: lib.rs  main.rs
ui/: appwindow.slint
