[package]
name = "slint-testing"
version = "0.1.0"
authors = ["Ryan Carins <carinsryan@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde_json = "1.0.113"

[build-dependencies]
slint-build = "1.4"
