[package]
name = "srest"
version = "0.1.0"
authors = ["Ryan Carins <carinsryan@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "srest-desktop"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1"
reqwest = { version = "0.11"}
serde_json = "1"

[build-dependencies]
slint-build = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
tokio = { version = "1", features = ["rt", "macros"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
